fix for sharing buttons on IE

--- a/public/checklist.css
+++ b/public/checklist.css
@@ -344,7 +344,7 @@ p.point {font-size: 27px; margin-top: 30px; margin-bottom: 10px; display: block;
 	height: 400px;
 	z-index: 9999;
 }
-
+#shareitup .fb-like {height: 100px;}
 #shareitup .twitter-share-button {margin-top: 20px;}
 #top-priority a.btn {color: #fff; text-decoration: none; display: block; text-align: center; padding-top: 9px; margin: 0 auto; cursor: pointer;}
 .screenies {text-align: center; overflow: auto; display: block; width: 100%; margin-top: 20px; margin-bottom: 10px;}
